[gd_scene load_steps=12 format=3 uid="uid://dt48ni38rg5rn"]

[ext_resource type="Texture2D" uid="uid://ccfynsphdrtel" path="res://assets/sprites/securityRobot.png" id="1_g0vum"]
[ext_resource type="Script" path="res://scripts/enemies/security_robot.gd" id="1_ihray"]
[ext_resource type="Texture2D" uid="uid://dpmc3tm70cchh" path="res://assets/sprites/security_robot_ray.png" id="2_rgfy8"]
[ext_resource type="PackedScene" uid="uid://cl88owhcrejwd" path="res://scenes/killzoneRay.tscn" id="4_n5nko"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ud5l5"]
size = Vector2(69, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp37s"]
atlas = ExtResource("1_g0vum")
region = Rect2(0, 0, 21, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_61flw"]
atlas = ExtResource("1_g0vum")
region = Rect2(21, 0, 21, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qltf"]
atlas = ExtResource("1_g0vum")
region = Rect2(42, 0, 21, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hvj8"]
atlas = ExtResource("1_g0vum")
region = Rect2(63, 0, 21, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_0jcpo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp37s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61flw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qltf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hvj8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_biexa"]
size = Vector2(19, 26)

[node name="SecurityRobot" type="CharacterBody2D"]
script = ExtResource("1_ihray")

[node name="Ray" type="Sprite2D" parent="."]
position = Vector2(59, -5)
texture = ExtResource("2_rgfy8")

[node name="killzone" parent="." instance=ExtResource("4_n5nko")]

[node name="RayCollision" type="CollisionShape2D" parent="killzone"]
position = Vector2(46.5, -5.5)
shape = SubResource("RectangleShape2D_ud5l5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0jcpo")
autoplay = "default"

[node name="MarkerChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarkerChecker"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_biexa")

[connection signal="body_entered" from="killzone" to="." method="_on_killzone_body_entered"]
[connection signal="body_exited" from="killzone" to="." method="_on_killzone_body_exited"]
[connection signal="area_entered" from="MarkerChecker" to="." method="_on_marker_checker_area_entered"]
